# satellites

./: CMakeLists.txt
src/: infowindow.cpp  infowindow.h  infowindow.ui  mainwindow.cpp  mainwindow.h  satellite.cpp  satellite.h  tleparser.cpp  tleparser.h  tlereader.cpp  tlereader.h
